--- a/FigmaDesign/src/components/productPage.css
+++ b/FigmaDesign/src/components/productPage.css
@@ -18,7 +18,6 @@
   margin-top: 15px;
 }
 .customeSuggestions > p {
-  /* border: 1px solid red; */
   padding: 13px 24px;
   border-radius: 20px;
   margin-left: -5px;
@@ -26,27 +25,19 @@
 }
 
 .card-holder {
-  /* background: url("../");
-    background-size: cover;
-    background-position: center; */
-  /* width: 250px; */
   border-radius: 20px;
   position: absolute;
   display: flex;
   gap: 10px;
-  height: 437.45px;
-  /* border: 1px solid rgb(228, 157, 157); */
+  height: 400.45px;
 
   .card {
     padding: 10px;
     position: relative;
     background: #0000003d;
     border-radius: 20px;
-    /* border: 1px solid red; */
     width: 316.31px;
     height: 95%;
-
-    /* margin-right: 20px; */
   }
 
   .flipkart-logo {
@@ -106,4 +97,23 @@
       }
     }
   }
+}
+
+.buttonShopMore {
+  position: absolute;
+  bottom: 22%;
+  left: 40%;
+  background-color: transparent;
+  color: white;
+  border: 1px solid rgba(58, 58, 58, 1);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 60px;
+}
+.buttonShopMore > p {
+  font-size: 12px;
+  line-height: 23px;
+  font-weight: 500;
 }
