--- a/FigmaDesign/src/components/searchbar.css
+++ b/FigmaDesign/src/components/searchbar.css
@@ -30,7 +30,7 @@ input {
   padding: 10px;
   border-radius: 54px;
 }
-button {
+.buttonShop {
   border-radius: 31px;
   border: none;
   cursor: pointer;
